Updated compute, getKp, getKi and getKd method and added getParameters method implementation. Updated CMakelists.txt

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(shell-app main.cpp main2.cpp)
+add_executable(shell-app main.cpp Parameters.cpp PIDController.cpp)
 include_directories(
     ${CMAKE_SOURCE_DIR}/include
 )
